--- a/index.html
+++ b/index.html
@@ -115,7 +115,6 @@
             <div class="header_content">
               <div>Special Offer</div>
               <span>Immersive Entertainment</span>
-              <p>Discover our new items. Up to 25% Off !</p>
               <a href="">Shop Now</a>
               <img src="public/images/icons/header_img.svg" alt="" />
             </div>
@@ -135,15 +134,47 @@
             <div class="header_box">
               <div class="box_left">
                 <span>Starting from $899</span>
-                <p>Health Care Monitor</p>
+                <p>Hanpicked Headphones</p>
                 <a href="">Shop Now</a>
                 <div class="hover_border"></div>
               </div>
               <div class="box_right">
-                <img src="public/images/smart_watch (2).svg" alt="" />
+                <img src="public/images/headphone2.svg" alt="" />
               </div>
             </div>
           </div>
+        </div>
+      </div>
+      <div class="service_frame">
+        <div class="container">
+          <div class="service_box">
+          <img src="public/images/track.svg" alt="">
+          <div class="service_content">
+            <span>Free Shipping</span>
+            <p>Free Shipping for outdors over $232 </p> 
+          </div>
+        </div>
+        <div class="service_box">
+          <img src="public/images/garantue.svg" alt="">
+          <div class="service_content">
+            <span>Money Gurantee</span>
+            <p>Within 30 days without an exchange </p> 
+          </div>
+        </div><div class="service_box">
+          <img src="public/images/headphones.svg" alt="">
+          <div class="service_content">
+            <span>Online Support</span>
+            <p>24 hours a day, 7 days a week </p> 
+          </div>
+        </div><div class="service_box">
+          <img src="public/images/credit-card.svg" alt="">
+          <div class="service_content">
+            <span>Flexible Payment</span>
+            <p> Pay with Multiple Credit Cards </p> 
+          </div>
+        </div>
+          </div>
+        </div>
         </div>
       </div>
     </div>
