feat: completed category section

--- a/index.html
+++ b/index.html
@@ -177,6 +177,52 @@
           </div>
         </div>
       </div>
+      <div class="shop_category_frame">
+        <div class="container">
+          <div class="category_top">
+            <span>Shop by Category</span>
+            <a href="">View All categories</a>
+          </div>
+          <div class="category_wrapper">
+            <div class="category_box">
+              <div class="category_image_box">
+                <img src="public/images/tv.png" alt="" />
+              </div>
+              <span>TVs, Home Theatre , and Accssories</span>
+            </div>
+            <div class="category_box">
+              <div class="category_image_box">
+                <img src="public/images/computer.png" alt="" />
+              </div>
+              <span>Computers, Tables, and Accssories</span>
+            </div>
+            <div class="category_box">
+              <div class="category_image_box">
+                <img src="public/images/smart.png" alt="" />
+              </div>
+              <span>Smart Home </span>
+            </div>
+            <div class="category_box">
+              <div class="category_image_box">
+                <img src="public/images/headphone (2).png" alt="" />
+              </div>
+              <span>Headphone and Portable Speakers</span>
+            </div>
+            <div class="category_box">
+              <div class="category_image_box">
+                <img src="public/images/phone (2).png" alt="" />
+              </div>
+              <span>Cell Phones and Accssories</span>
+            </div>
+            <div class="category_box">
+              <div class="category_image_box">
+                <img src="public/images/game.png" alt="" />
+              </div>
+              <span>Video Games, Consoles, and Accssories</span>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
