--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <div class="header_content">
               <div>Special Offer</div>
               <span>Immersive Entertainment</span>
-              <a href="">Shop Now</a>
+<a href="">Shop Now</a>
               <img src="public/images/icons/header_img.svg" alt="" />
             </div>
           </div>
@@ -180,7 +180,7 @@
       <div class="shop_category_frame">
         <div class="container">
           <div class="category_top">
-            <span>Shop by Category</span>
+            <span>Shop Category</span>
             <a href="">View All categories</a>
           </div>
           <div class="category_wrapper">
@@ -223,6 +223,136 @@
           </div>
         </div>
       </div>
+<div class="product_wrapper">
+         <div class="next_prev_box">
+<img src="public/images/icons/next.svg" alt="">
+          </div>
+          <div class="product_boxes">
+            <div class="product_box">
+              <a href="">
+                <div class="product_img_box"
+                 style="background: url(public/images/watch.png); 
+                background-size: cover;">
+                <div class="hover_box">
+                 <button> Add To Card</button> 
+                </div>
+              </div>
+              </a>
+              <div class="product_content_box"> 
+                <span class="product_titile">Samsung</span>
+                <a href="" class="href">
+                  <p class="product_desc">Apple Watch SE (GPS) 40mm Space Grey Aluminum Case with</p>
+                </a>
+                <div class="review_box">
+                  <img src="public/images/icons/review.svg" alt="">
+                  <img src="public/images/icons/review.svg" alt="">
+                  <img src="public/images/icons/review.svg" alt="">
+                  <img src="public/images/icons/review.svg" alt="">
+                  <img src="public/images/icons/review.svg" alt="">
+                  <span>3.014 reviews</span>
+                </div>
+                <div class="price_box">
+                  <strong>$32</strong>
+                  <span>$45</span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="product_boxes">
+            <div class="product_box">
+              <a href="">
+                <div class="product_img_box"
+                 style="background: url(public/images/phone.png); 
+                background-size: cover;">
+                <div class="hover_box">
+                 <button> Add To Card</button> 
+                </div>
+              </div>
+              </a>
+              <div class="product_content_box"> 
+                <span class="product_titile">Samsung</span>
+                <a href="" class="href">
+                  <p class="product_desc">Apple Watch SE (GPS) 40mm Space Grey Aluminum Case with</p>
+                </a>
+                <div clas="review_box">
+                  <img src="public/images/icons/review.svg" alt="">
+                  <img src="public/images/icons/review.svg" alt="">
+                  <img src="public/images/icons/review.svg" alt="">
+                  <img src="public/images/icons/review.svg" alt="">
+                  <img src="public/images/icons/review.svg" alt="">
+                  <span>3.014 reviews</span>
+                </div>
+                <div class="price_box">
+                  <strong>$32</strong>
+                  <span>$45</span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="product_boxes">
+            <div class="product_box">
+              <a href="">
+                <div class="product_img_box"
+                 style="background: url(public/images/iRobot.png); 
+                background-size: cover;">
+                <div class="hover_box">
+                 <button> Add To Card</button> 
+                </div>
+              </div>
+              </a>
+              <div class="product_content_box"> 
+                <span class="product_titile">Samsung</span>
+                <a href="" class="href">
+                  <p class="product_desc">Apple Watch SE (GPS) 40mm Space Grey Aluminum Case with</p>
+                </a>
+                <div clas="review_box">
+                  <img src="public/images/icons/review.svg" alt="">
+                  <img src="public/images/icons/review.svg" alt="">
+                  <img src="public/images/icons/review.svg" alt="">
+                  <img src="public/images/icons/review.svg" alt="">
+                  <img src="public/images/icons/review.svg" alt="">
+                  <span>3.014 reviews</span>
+                </div>
+                <div class="price_box">
+                  <strong>$32</strong>
+                  <span>$45</span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="product_boxes">
+         <div class="product_box">
+              <a href="">
+                <div class="product_img_box"
+                 style="background: url(public/images/dyson.png); 
+                background-size: cover;">
+                <div class="hover_box">
+                 <button> Add To Card</button> 
+                </div>
+              </div>
+              </a>
+              <div class="product_content_box"> 
+                <span class="product_titile">EASTSPORT</span>
+                <a href="" class="href">
+                  <p class="product_desc">Dyson V7 Complate Cordless Stick Vacum - Iron/Blue</p>
+                <div clas="review_box">
+                  <img src="public/images/icons/review.svg" alt="">
+                  <img src="public/images/icons/review.svg" alt="">
+                  <img src="public/images/icons/review.svg" alt="">
+                  <img src="public/images/icons/review.svg" alt="">
+                  <img src="public/images/icons/review.svg" alt="">
+                  <span>3.014 reviews</span>
+                </div>
+                <div class="price_box">
+                  <strong>$32</strong>
+                  <span>$45</span>
+                </div>
+              </div>
+            </div>
+          </div> <div class="next_prev_box" style="transform: scaleX(-1);">
+            <img src="public/images/next.svg" alt="">
+          </div>
+        </div>
     </div>
   </body>
 </html>
