feat: completed section

--- a/index.html
+++ b/index.html
@@ -223,9 +223,17 @@
           </div>
         </div>
       </div>
-<div class="product_wrapper">
+
+      <div class="selling_product_frame">
+      <div class="container">
+        <div class="category_top">
+          <span>Top Selling Product</span>
+          <a href="">View All </a>
+        </div>
+
+      <div class="product_wrapper">
          <div class="next_prev_box">
-<img src="public/images/icons/next.svg" alt="">
+<img src="public/images/next.svg" alt="">
           </div>
           <div class="product_boxes">
             <div class="product_box">
@@ -239,16 +247,16 @@
               </div>
               </a>
               <div class="product_content_box"> 
-                <span class="product_titile">Samsung</span>
+                <span class="product_titile">SAMSUNG</span>
                 <a href="" class="href">
                   <p class="product_desc">Apple Watch SE (GPS) 40mm Space Grey Aluminum Case with</p>
                 </a>
                 <div class="review_box">
-                  <img src="public/images/icons/review.svg" alt="">
-                  <img src="public/images/icons/review.svg" alt="">
-                  <img src="public/images/icons/review.svg" alt="">
-                  <img src="public/images/icons/review.svg" alt="">
-                  <img src="public/images/icons/review.svg" alt="">
+                  <img src="public/images/review.svg" alt="">
+                  <img src="public/images/review.svg" alt="">
+                  <img src="public/images/review.svg" alt="">
+                  <img src="public/images/review.svg" alt="">
+                  <img src="public/images/review.svg" alt="">
                   <span>3.014 reviews</span>
                 </div>
                 <div class="price_box">
@@ -270,16 +278,16 @@
               </div>
               </a>
               <div class="product_content_box"> 
-                <span class="product_titile">Samsung</span>
+                <span class="product_titile">SONY</span>
                 <a href="" class="href">
-                  <p class="product_desc">Apple Watch SE (GPS) 40mm Space Grey Aluminum Case with</p>
+                  <p class="product_desc">Apple Iphone 11 64GB Smartphone Black</p>
                 </a>
                 <div clas="review_box">
-                  <img src="public/images/icons/review.svg" alt="">
-                  <img src="public/images/icons/review.svg" alt="">
-                  <img src="public/images/icons/review.svg" alt="">
-                  <img src="public/images/icons/review.svg" alt="">
-                  <img src="public/images/icons/review.svg" alt="">
+                  <img src="public/images/review.svg" alt="">
+                  <img src="public/images/review.svg" alt="">
+                  <img src="public/images/review.svg" alt="">
+                  <img src="public/images/review.svg" alt="">
+                  <img src="public/images/review.svg" alt="">
                   <span>3.014 reviews</span>
                 </div>
                 <div class="price_box">
@@ -301,16 +309,16 @@
               </div>
               </a>
               <div class="product_content_box"> 
-                <span class="product_titile">Samsung</span>
+                <span class="product_titile">SONY</span>
                 <a href="" class="href">
-                  <p class="product_desc">Apple Watch SE (GPS) 40mm Space Grey Aluminum Case with</p>
+                  <p class="product_desc">iRobot Roomba i3+ EVO WIFI connected Self-Empty Robot</p>
                 </a>
                 <div clas="review_box">
-                  <img src="public/images/icons/review.svg" alt="">
-                  <img src="public/images/icons/review.svg" alt="">
-                  <img src="public/images/icons/review.svg" alt="">
-                  <img src="public/images/icons/review.svg" alt="">
-                  <img src="public/images/icons/review.svg" alt="">
+                  <img src="public/images/review.svg" alt="">
+                  <img src="public/images/review.svg" alt="">
+                  <img src="public/images/review.svg" alt="">
+                  <img src="public/images/review.svg" alt="">
+                  <img src="public/images/review.svg" alt="">
                   <span>3.014 reviews</span>
                 </div>
                 <div class="price_box">
@@ -336,11 +344,11 @@
                 <a href="" class="href">
                   <p class="product_desc">Dyson V7 Complate Cordless Stick Vacum - Iron/Blue</p>
                 <div clas="review_box">
-                  <img src="public/images/icons/review.svg" alt="">
-                  <img src="public/images/icons/review.svg" alt="">
-                  <img src="public/images/icons/review.svg" alt="">
-                  <img src="public/images/icons/review.svg" alt="">
-                  <img src="public/images/icons/review.svg" alt="">
+                  <img src="public/images/review.svg" alt="">
+                  <img src="public/images/review.svg" alt="">
+                  <img src="public/images/review.svg" alt="">
+                  <img src="public/images/review.svg" alt="">
+                  <img src="public/images/review.svg" alt="">
                   <span>3.014 reviews</span>
                 </div>
                 <div class="price_box">
@@ -352,6 +360,7 @@
           </div> <div class="next_prev_box" style="transform: scaleX(-1);">
             <img src="public/images/next.svg" alt="">
           </div>
+        </div>
         </div>
     </div>
   </body>
