fix: repractor top_selling_product view

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="public/css/command.css" />
-    <link rel="stylesheet" href="public/css/home.css" />
+    <link rel="stylesheet" href="other/public/css/command.css" />
+    <link rel="stylesheet" href="other/public/css/home.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500&display=swap"
       rel="stylesheet"
@@ -22,7 +22,7 @@
       <div class="container">
         <div class="navbar_top">
           <a href="">
-            <img src="public/images/logo (1).png" alt="Zenmart logo" />
+            <img src="other/public/images/logo (1).png" alt="Zenmart logo" />
           </a>
           <div class="nav_search_frame">
             <div class="nav_search_box">
@@ -35,14 +35,14 @@
               <input type="search" placeholder="Search products..." />
             </div>
             <div class="nav_search_icon_box">
-              <img src="public/images/button (1).svg" alt="search" />
+              <img src="other/public/images/button (1).svg" alt="search" />
             </div>
           </div>
           <div class="nav_top_menu">
             <a href="">
               <div class="top_menu_box">
                 <div class="box_icon_box">
-                  <img src="public/images/heart 1.svg" alt="" />
+                  <img src="other/public/images/heart 1.svg" alt="" />
                 </div>
                 <div class="box_info_box">
                   <span>Wishlist</span>
@@ -53,7 +53,7 @@
             <a href="">
               <div class="top_menu_box">
                 <div class="box_icon_box">
-                  <img src="public/images/profile 1.png" alt="" />
+                  <img src="other/public/images/profile 1.png" alt="" />
                 </div>
                 <div class="box_info_box">
                   <span>Sign In</span>
@@ -65,7 +65,7 @@
               <div class="top_menu_box">
                 <div class="box_icon_box">
                   <div class="basket_count">2</div>
-                  <img src="public/images/shopping-cart 1.png" alt="" />
+                  <img src="other/public/images/shopping-cart 1.png" alt="" />
                 </div>
                 <div class="box_info_box">
                   <span>200$</span>
@@ -78,7 +78,7 @@
         <div class="navbar_bott">
           <div class="navbar_bott_menu_box">
             <div class="browse_box">
-              <img src="public/images/Group 44.svg" alt="" />
+              <img src="other/public/images/Group 44.svg" alt="" />
               <span>Browse Categories</span>
             </div>
             <div class="navbar_route_menu">
@@ -116,7 +116,7 @@
               <div>Special Offer</div>
               <span>Immersive Entertainment</span>
 <a href="">Shop Now</a>
-              <img src="public/images/icons/header_img.svg" alt="" />
+              <img src="other/public/images/icons/header_img.svg" alt="" />
             </div>
           </div>
           <div class="header_right">
@@ -128,7 +128,7 @@
                 <div class="hover_border"></div>
               </div>
               <div class="box_right">
-                <img src="public/images/smart_watch (2).svg" alt="" />
+                <img src="other/public/images/smart_watch (2).svg" alt="" />
               </div>
             </div>
             <div class="header_box">
@@ -139,7 +139,7 @@
                 <div class="hover_border"></div>
               </div>
               <div class="box_right">
-                <img src="public/images/headphone2.svg" alt="" />
+                <img src="other/public/images/headphone2.svg" alt="" />
               </div>
             </div>
           </div>
@@ -148,28 +148,28 @@
       <div class="service_frame">
         <div class="container">
           <div class="service_box">
-            <img src="public/images/track.svg" alt="" />
+            <img src="other/public/images/track.svg" alt="" />
             <div class="service_content">
               <span>Free Shipping</span>
               <p>Free Shipping for orders over $200</p>
             </div>
           </div>
           <div class="service_box">
-            <img src="public/images/garantue.svg" alt="" />
+            <img src="other/public/images/garantue.svg" alt="" />
             <div class="service_content">
               <span>Money Gurantee</span>
               <p>Within 30 days for an exchange</p>
             </div>
           </div>
           <div class="service_box">
-            <img src="public/images/headphones.svg" alt="" />
+            <img src="other/public/images/headphones.svg" alt="" />
             <div class="service_content">
               <span>Online Support</span>
               <p>24 hours a day, 7 days a week</p>
             </div>
           </div>
           <div class="service_box">
-            <img src="public/images/credit-card.svg" alt="" />
+            <img src="other/public/images/credit-card.svg" alt="" />
             <div class="service_content">
               <span>Flexible Payment</span>
               <p>Pay with Multiple Credit Cards</p>
@@ -186,60 +186,58 @@
           <div class="category_wrapper">
             <div class="category_box">
               <div class="category_image_box">
-                <img src="public/images/tv.png" alt="" />
+                <img src="other/public/images/tv.png" alt="" />
               </div>
               <span>TVs, Home Theatre , and Accssories</span>
             </div>
             <div class="category_box">
               <div class="category_image_box">
-                <img src="public/images/computer.png" alt="" />
+                <img src="other/public/images/computer.png" alt="" />
               </div>
               <span>Computers, Tables, and Accssories</span>
             </div>
             <div class="category_box">
               <div class="category_image_box">
-                <img src="public/images/smart.png" alt="" />
+                <img src="other/public/images/smart.png" alt="" />
               </div>
               <span>Smart Home </span>
             </div>
             <div class="category_box">
               <div class="category_image_box">
-                <img src="public/images/headphone (2).png" alt="" />
+                <img src="other/public/images/headphone (2).png" alt="" />
               </div>
               <span>Headphone and Portable Speakers</span>
             </div>
             <div class="category_box">
               <div class="category_image_box">
-                <img src="public/images/phone (2).png" alt="" />
+                <img src="other/public/images/phone (2).png" alt="" />
               </div>
               <span>Cell Phones and Accssories</span>
             </div>
             <div class="category_box">
               <div class="category_image_box">
-                <img src="public/images/game.png" alt="" />
+                <img src="other/public/images/game.png" alt="" />
               </div>
               <span>Video Games, Consoles, and Accssories</span>
             </div>
           </div>
         </div>
       </div>
-
       <div class="selling_product_frame">
       <div class="container">
         <div class="category_top">
           <span>Top Selling Product</span>
           <a href="">View All </a>
         </div>
-
       <div class="product_wrapper">
          <div class="next_prev_box">
-<img src="public/images/next.svg" alt="">
+<img src="other/public/images/next.svg" alt="">
           </div>
           <div class="product_boxes">
             <div class="product_box">
               <a href="">
                 <div class="product_img_box"
-                 style="background: url(public/images/watch.png); 
+                 style="background: url(other/public/images/watch.png); 
                 background-size: cover;">
                 <div class="hover_box">
                  <button> Add To Card</button> 
@@ -252,11 +250,11 @@
                   <p class="product_desc">Apple Watch SE (GPS) 40mm Space Grey Aluminum Case with</p>
                 </a>
                 <div class="review_box">
-                  <img src="public/images/review.svg" alt="">
-                  <img src="public/images/review.svg" alt="">
-                  <img src="public/images/review.svg" alt="">
-                  <img src="public/images/review.svg" alt="">
-                  <img src="public/images/review.svg" alt="">
+                  <img src="other/public/images/review.svg" alt="">
+                  <img src="other/public/images/review.svg" alt="">
+                  <img src="other/public/images/review.svg" alt="">
+                  <img src="other/public/images/review.svg" alt="">
+                  <img src="other/public/images/review.svg" alt="">
                   <span>3.014 reviews</span>
                 </div>
                 <div class="price_box">
@@ -270,7 +268,7 @@
             <div class="product_box">
               <a href="">
                 <div class="product_img_box"
-                 style="background: url(public/images/phone.png); 
+                 style="background: url(other/public/images/phone.png); 
                 background-size: cover;">
                 <div class="hover_box">
                  <button> Add To Card</button> 
@@ -283,11 +281,11 @@
                   <p class="product_desc">Apple Iphone 11 64GB Smartphone Black</p>
                 </a>
                 <div clas="review_box">
-                  <img src="public/images/review.svg" alt="">
-                  <img src="public/images/review.svg" alt="">
-                  <img src="public/images/review.svg" alt="">
-                  <img src="public/images/review.svg" alt="">
-                  <img src="public/images/review.svg" alt="">
+                  <img src="other/public/images/review.svg" alt="">
+                  <img src="other/public/images/review.svg" alt="">
+                  <img src="other/public/images/review.svg" alt="">
+                  <img src="other/public/images/review.svg" alt="">
+                  <img src="other/public/images/review.svg" alt="">
                   <span>3.014 reviews</span>
                 </div>
                 <div class="price_box">
@@ -301,7 +299,7 @@
             <div class="product_box">
               <a href="">
                 <div class="product_img_box"
-                 style="background: url(public/images/iRobot.png); 
+                 style="background: url(other/public/images/iRobot.png); 
                 background-size: cover;">
                 <div class="hover_box">
                  <button> Add To Card</button> 
@@ -314,11 +312,11 @@
                   <p class="product_desc">iRobot Roomba i3+ EVO WIFI connected Self-Empty Robot</p>
                 </a>
                 <div clas="review_box">
-                  <img src="public/images/review.svg" alt="">
-                  <img src="public/images/review.svg" alt="">
-                  <img src="public/images/review.svg" alt="">
-                  <img src="public/images/review.svg" alt="">
-                  <img src="public/images/review.svg" alt="">
+                  <img src="other/public/images/review.svg" alt="">
+                  <img src="other/public/images/review.svg" alt="">
+                  <img src="other/public/images/review.svg" alt="">
+                  <img src="other/public/images/review.svg" alt="">
+                  <img src="other/public/images/review.svg" alt="">
                   <span>3.014 reviews</span>
                 </div>
                 <div class="price_box">
@@ -332,7 +330,7 @@
          <div class="product_box">
               <a href="">
                 <div class="product_img_box"
-                 style="background: url(public/images/dyson.png); 
+                 style="background: url(other/public/images/dyson.png); 
                 background-size: cover;">
                 <div class="hover_box">
                  <button> Add To Card</button> 
@@ -344,11 +342,11 @@
                 <a href="" class="href">
                   <p class="product_desc">Dyson V7 Complate Cordless Stick Vacum - Iron/Blue</p>
                 <div clas="review_box">
-                  <img src="public/images/review.svg" alt="">
-                  <img src="public/images/review.svg" alt="">
-                  <img src="public/images/review.svg" alt="">
-                  <img src="public/images/review.svg" alt="">
-                  <img src="public/images/review.svg" alt="">
+                  <img src="other/public/images/review.svg" alt="">
+                  <img src="other/public/images/review.svg" alt="">
+                  <img src="other/public/images/review.svg" alt="">
+                  <img src="other/public/images/review.svg" alt="">
+                  <img src="other/public/images/review.svg" alt="">
                   <span>3.014 reviews</span>
                 </div>
                 <div class="price_box">
@@ -358,10 +356,40 @@
               </div>
             </div>
           </div> <div class="next_prev_box" style="transform: scaleX(-1);">
-            <img src="public/images/next.svg" alt="">
+            <img src="other/public/images/next.svg" alt="">
+          </div>
+        </div>
+        <div class="product_pagination_box">
+          <div class="product_pagination_main">
+            <img src="other/public/images/arrow-prev_next.svg" alt="">
+            <div class="pagination_dot">
+              <div class="dot">
+                <div></div>
+              </div>
+              <div class="dot">
+                <div></div>
+              </div>
+              <div class="dot active">
+                <div></div>
+              </div>
+              <div class="dot">
+                <div></div>
+              </div>
+              <div class="dot">
+                <div></div>
+              </div>
+              <div class="dot">
+                <div></div>
+              </div>
+              <div class="dot">
+                <div></div>
+              </div>
+            </div>
+            <img src="other/public/images/arrow-prev_next.svg" alt="" style="transform: scaleX(-1);">
           </div>
         </div>
         </div>
+    </div>
     </div>
   </body>
 </html>
