feat: completed adv section view

--- a/index.html
+++ b/index.html
@@ -359,8 +359,8 @@
             <img src="other/public/images/next.svg" alt="">
           </div>
         </div>
-        <div class="product_pagination_box">
-          <div class="product_pagination_main">
+        <div class="pagination_box">
+          <div class="pagination_main">
             <img src="other/public/images/arrow-prev_next.svg" alt="">
             <div class="pagination_dot">
               <div class="dot">
@@ -381,14 +381,14 @@
               <div class="dot">
                 <div></div>
               </div>
-              <div class="dot">
-                <div></div>
-              </div>
             </div>
-            <img src="other/public/images/arrow-prev_next.svg" alt="" style="transform: scaleX(-1);">
+            <img src="other/public/images/arrow-prev_next.svg" alt="" style="transform: rotate(180deg);">
           </div>
         </div>
         </div>
+    </div>
+    <div class="adv_frame">
+      Member get free shipping* with no order minimumi!Restriction.Try free 30-days trial
     </div>
     </div>
   </body>
