--- a/index.html
+++ b/index.html
@@ -390,6 +390,57 @@
     <div class="adv_frame">
       Member get free shipping* with no order minimumi!Restriction.Try free 30-days trial
     </div>
+    <div class="spec_product_frame">
+      <div class="container">
+        <div class="category_top">
+          <span>Headphones</span>
+          <a href="">View All </a>
+        </div>
+        <div class="spec_product_wrapper">
+          <div class="big_product_box">
+            <div class="big_product_content">
+              <span>Now in moon gray</span>
+              <p>Beats
+                Studio Buds
+              </p>
+              <a href="">Shop now</a>
+              <div class="hover_border"></div>
+            </div>
+            <img src="other/public/images/headphone_big.png" alt="">
+          </div>
+          <div class="small_product_wrapper">
+            <div class="small_product_box">
+             <div class="small_product_content">
+              <strong>Over-Ear</strong>
+              <span>29 items</span>
+             </div>
+             <img src="other/public/images/sony_headphone.png" alt="">
+            </div>
+            <div class="small_product_box">
+             <div class="small_product_content">
+              <strong>Over-Ear</strong>
+              <span>29 items</span>
+             </div>
+             <img src="other/public/images/on-ear.png" alt="">
+            </div>
+            <div class="small_product_box">
+             <div class="small_product_content">
+              <strong>Sports & Fitness</strong>
+              <span>29 items</span>
+             </div>
+             <img src="other/public/images/fitness_headphone.png" alt="">
+            </div>
+            <div class="small_product_box">
+             <div class="small_product_content">
+              <strong>Bluetooth & Headphones</strong>
+              <span>29 items</span>
+             </div>
+             <img src="other/public/images/bluetooth_headphones.png" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     </div>
   </body>
 </html>
