--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
         </div>
       <div class="product_wrapper">
          <div class="next_prev_box">
-<img src="other/public/images/next.svg" alt="">
+         <img src="other/public/images/next.svg" alt="">
           </div>
           <div class="product_boxes">
             <div class="product_box">
@@ -355,7 +355,8 @@
                 </div>
               </div>
             </div>
-          </div> <div class="next_prev_box" style="transform: scaleX(-1);">
+          </div>
+           <div class="next_prev_box" style="transform: scaleX(-1);">
             <img src="other/public/images/next.svg" alt="">
           </div>
         </div>
@@ -389,7 +390,7 @@
     </div>
     <div class="adv_frame">
       Member get free shipping* with no order minimumi!Restriction.Try free 30-days trial
-    </div>
+    </div>  
     <div class="spec_product_frame">
       <div class="container">
         <div class="category_top">
@@ -437,6 +438,178 @@
              </div>
              <img src="other/public/images/bluetooth_headphones.png" alt="">
             </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="tv_frame">
+      <div class="container">
+        <div class="category_top">
+          <span>TV & Home Theatre</span>
+         <div> <a href="">Television </a>
+          <a href="">Digital Cable </a>
+          <a href="">Media Streamers </a>
+          <a href="">Remote Controls </a></div>
+        </div>
+        <div class="tv_wrapper">
+   <div class="next_prev_box">
+         <img src="other/public/images/next.svg" alt="">
+          </div>
+          <div class="tv_product_boxes">
+            <div class="tv_product_box">
+              <div class="product_img">
+                <a href="">
+                  <img src="other/public/images/samsung_tv.png" alt="">
+                </a>
+              </div>
+            <div class="product_content_box"> 
+                <span class="product_titile">SAMSUNG</span>
+                <a href="" class="href">
+                  <p class="product_desc">Samsung 58* 4K UHD HDR LED TIZEN Smart TV</p>
+                </a>
+                <div class="review_box">
+                  <img src="other/public/images/review.svg" alt="">
+                  <img src="other/public/images/review.svg" alt="">
+                  <img src="other/public/images/review.svg" alt="">
+                  <img src="other/public/images/review.svg" alt="">
+                  <img src="other/public/images/review.svg" alt="">
+                  <span>3.014 reviews</span>
+                </div>
+                <div class="price_box">
+                  <strong>$32</strong>
+                  <span>$45</span>
+                </div>
+              </div>
+            </div>
+             <div class="tv_product_box">
+              <div class="product_img">
+                <a href="">
+                  <img src="other/public/images/tcl.png" alt="">
+                </a>
+              </div>
+            <div class="product_content_box"> 
+                <span class="product_titile">TCL</span>
+                <a href="" class="href">
+                  <p class="product_desc">TCL-3 Series 40* 1080p HD LED Android Smart TV</p>
+                </a>
+                <div class="review_box">
+                  <img src="other/public/images/review.svg" alt="">
+                  <img src="other/public/images/review.svg" alt="">
+                  <img src="other/public/images/review.svg" alt="">
+                  <img src="other/public/images/review.svg" alt="">
+                  <img src="other/public/images/review.svg" alt="">
+                  <span>3.014 reviews</span>
+                </div>
+                <div class="price_box">
+                  <strong>$32</strong>
+                  <span>$45</span>
+                </div>
+              </div>
+            </div>
+             <div class="tv_product_box">
+              <div class="product_img">
+                <a href="">
+                  <img src="other/public/images/LG-UHD.png" alt="">
+                </a>
+              </div>
+            <div class="product_content_box"> 
+                <span class="product_titile">LG</span>
+                <a href="" class="href">
+                  <p class="product_desc">LG 65* 4K UHD HDR LED webOS Smart TV</p>
+                </a>
+                <div class="review_box">
+                  <img src="other/public/images/review.svg" alt="">
+                  <img src="other/public/images/review.svg" alt="">
+                  <img src="other/public/images/review.svg" alt="">
+                  <img src="other/public/images/review.svg" alt="">
+                  <img src="other/public/images/review.svg" alt="">
+                  <span>3.014 reviews</span>
+                </div>
+                <div class="price_box">
+                  <strong>$32</strong>
+                  <span>$45</span>
+                </div>
+              </div>
+            </div>
+             <div class="tv_product_box">
+              <div class="product_img">
+                <a href="">
+                  <img src="other/public/images/LG-OLED.png" alt="">
+                </a>
+              </div>
+            <div class="product_content_box"> 
+                <span class="product_titile">LG</span>
+                <a href="" class="href">
+                  <p class="product_desc">LG 55* 4K UHD HDR LED webOS Smart TV</p>
+                </a>
+                <div class="review_box">
+                  <img src="other/public/images/review.svg" alt="">
+                  <img src="other/public/images/review.svg" alt="">
+                  <img src="other/public/images/review.svg" alt="">
+                  <img src="other/public/images/review.svg" alt="">
+                  <img src="other/public/images/review.svg" alt="">
+                  <span>3.014 reviews</span>
+                </div>
+                <div class="price_box">
+                  <strong>$32</strong>
+                  <span>$45</span>
+                </div>
+              </div>
+            </div>
+             <div class="tv_product_box">
+              <div class="product_img">
+                <a href="">
+                  <img src="other/public/images/SONY-TV.png" alt="">
+                </a>
+              </div>
+            <div class="product_content_box"> 
+                <span class="product_titile">SONY</span>
+                <a href="" class="href">
+                  <p class="product_desc">Sony X85J 65" 4K UHD HDR LED Smart Google TV</p>
+                </a>
+                <div class="review_box">
+                  <img src="other/public/images/review.svg" alt="">
+                  <img src="other/public/images/review.svg" alt="">
+                  <img src="other/public/images/review.svg" alt="">
+                  <img src="other/public/images/review.svg" alt="">
+                  <img src="other/public/images/review.svg" alt="">
+                  <span>3.014 reviews</span>
+                </div>
+                <div class="price_box">
+                  <strong>$32</strong>
+                  <span>$45</span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="next_prev_box" style="transform: scaleX(-1);">
+            <img src="other/public/images/next.svg" alt="">
+          </div>
+        </div>
+        <div class="pagination_box">
+          <div class="pagination_main">
+            <img src="other/public/images/arrow-prev_next.svg" alt="">
+            <div class="pagination_dot">
+              <div class="dot">
+                <div></div>
+              </div>
+              <div class="dot">
+                <div></div>
+              </div>
+              <div class="dot active">
+                <div></div>
+              </div>
+              <div class="dot">
+                <div></div>
+              </div>
+              <div class="dot">
+                <div></div>
+              </div>
+              <div class="dot">
+                <div></div>
+              </div>
+            </div>
+            <img src="other/public/images/arrow-prev_next.svg" alt="" style="transform: rotate(180deg);">
           </div>
         </div>
       </div>
