--- a/index.html
+++ b/index.html
@@ -614,6 +614,147 @@
         </div>
       </div>
     </div>
+     <div class="event_frame">
+      <div class="container">
+        <div class="event_content_box">
+          <span class="event_title">Top Deals Of The Day</span>
+          <div class="timer_wrapper">
+            <div class="timer_box">
+              <strong>178</strong>
+              <span>Days</span>
+            </div>
+            <div class="timer_box">
+              <strong>23</strong>
+              <span>Ours</span>
+            </div>
+            <div class="timer_box">
+              <strong>14</strong>
+              <span>Minutes</span>
+            </div>
+            <div class="timer_box">
+              <strong>39</strong>
+              <span>Secunds</span>
+            </div>
+          </div>
+          <a href="">Show More</a>
+        </div>
+        <div class="event_product_wrapper">
+       <div class="next_prev_box">
+         <a href="">
+          <img src="other/public/images/next.svg" alt="" class="white_svg">
+         </a>
+          </div>
+          <div class="event_product_boxes">
+            <div class="event_product_box">
+              <div class="event_product_img">
+                <img src="other/public/images/sony_notebook.png" alt="">
+              </div>
+              <div class="product_content_box" style="padding: 0 0 0 10px;"> 
+                <span class="product_titile">SONY</span>
+                <a href="" class="href">
+                  <a href="">
+                    <p class="product_desc">SAMSUNG Chromebook 4+ 15.6" Intel® Celeron®</p>
+                  </a>
+                </a>
+                <div class="review_box">
+                  <img src="other/public/images/review.svg" alt="">
+                  <img src="other/public/images/review.svg" alt="">
+                  <img src="other/public/images/review.svg" alt="">
+                  <img src="other/public/images/review.svg" alt="">
+                  <img src="other/public/images/review.svg" alt="">
+                  <span>3.014 reviews</span>
+                </div>
+                <div class="price_box">
+                  <strong>$32</strong>
+                  <span>$45</span>
+                </div>
+              </div>
+            </div>
+            <div class="event_product_box">
+              <div class="event_product_img">
+                <a href="">
+                  <img src="other/public/images/sony_playstation.png" alt=""></a>
+              </div>
+              <div class="product_content_box" style="padding: 0 0 0 10px;"> 
+                <span class="product_titile">SONY</span>
+                <a href="" class="href">
+                  <a href="">
+                    <p class="product_desc">Sony Plastation 5 Video Game Console</p>
+                  </a>
+                </a>
+                <div class="review_box">
+                  <img src="other/public/images/review.svg" alt="">
+                  <img src="other/public/images/review.svg" alt="">
+                  <img src="other/public/images/review.svg" alt="">
+                  <img src="other/public/images/review.svg" alt="">
+                  <img src="other/public/images/review.svg" alt="">
+                  <span>3.014 reviews</span>
+                </div>
+                <div class="price_box">
+                  <strong>$32</strong>
+                  <span>$45</span>
+                </div>
+              </div>
+            </div>
+            <div class="event_product_box">
+              <div class="event_product_img">
+                <a href="">
+                  <img src="other/public/images/apple_watch.png" alt="">
+                </a>
+              </div>
+              <div class="product_content_box" style="padding: 0 0 0 10px;"> 
+                <span class="product_titile">EASTSPORT</span>
+                <a href="" class="href">
+                  <a href="">
+                    <p class="product_desc">Apple Watch Series 3 GPS Space Gray - 38mm-Black </p></a>
+                </a>
+                <div class="review_box">
+                  <img src="other/public/images/review.svg" alt="">
+                  <img src="other/public/images/review.svg" alt="">
+                  <img src="other/public/images/review.svg" alt="">
+                  <img src="other/public/images/review.svg" alt="">
+                  <img src="other/public/images/review.svg" alt="">
+                  <span>3.014 reviews</span>
+                </div>
+                <div class="price_box">
+                  <strong>$32</strong>
+                  <span>$45</span>
+                </div>
+              </div>
+            </div>
+            <div class="event_product_box">
+              <div class="event_product_img">
+                <a href="">
+                  <img src="other/public/images/canon_camera.png" alt=""></a>
+              </div>
+              <div class="product_content_box" style="padding: 0 0 0 10px;"> 
+                <span class="product_titile">EASTSPORT</span>
+                <a href="" class="href">
+                  <a href="">
+                    <p class="product_desc">Canon EOS Rebel T100 Digital SLR Camera with.</p>
+                  </a>
+                </a>
+                <div class="review_box">
+                  <img src="other/public/images/review.svg" alt="">
+                  <img src="other/public/images/review.svg" alt="">
+                  <img src="other/public/images/review.svg" alt="">
+                  <img src="other/public/images/review.svg" alt="">
+                  <img src="other/public/images/review.svg" alt="">
+                  <span>3.014 reviews</span>
+                </div>
+                <div class="price_box">
+                  <strong>$32</strong>
+                  <span>$45</span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="next_prev_box" style="transform: scaleX(-1); ">
+            <img src="other/public/images/next.svg" alt="" class="white_svg">
+          </div>
+        </div>
+      </div>
+     </div>
     </div>
-  </body>
+  </body> 
 </html>
