--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="navbar_frame">
       <div class="container">
         <div class="navbar_top">
-          <a href="">
+          <a href="index.html">
             <img src="other/public/images/logo (1).png" alt="Zenmart logo" />
           </a>
           <div class="nav_search_frame">
@@ -40,7 +40,7 @@
             </div>
           </div>
           <div class="nav_top_menu">
-            <a href="">
+            <a href="./order/cart.html">
               <div class="top_menu_box">
                 <div class="box_icon_box">
                   <img src="other/public/images/heart 1.svg" alt="" />
@@ -51,7 +51,7 @@
                 </div>
               </div>
             </a>
-            <a href="">
+            <a href="./other/login.html">
               <div class="top_menu_box">
                 <div class="box_icon_box">
                   <img src="other/public/images/profile 1.png" alt="" />
@@ -62,7 +62,7 @@
                 </div>
               </div>
             </a>
-            <a href="">
+            <a href="./order/cart.html">
               <div class="top_menu_box">
                 <div class="box_icon_box">
                   <div class="basket_count">2</div>
@@ -84,19 +84,19 @@
             </div>
             <div class="navbar_route_menu">
               <div class="router_menu">
-                <a href="" class="active">Home</a>
+                <a href="./index.html" class="active">Home</a>
               </div>
               <div class="router_menu">
-                <a href="">Shop</a>
+                <a href="./other/product/all.html">Shop</a>
               </div>
               <div class="router_menu">
-                <a href="">Orders</a>
+                <a href="./order/cart.html">Orders</a>
               </div>
               <div class="router_menu">
-                <a href="">About</a>
+                <a href="./other/about.html">About</a>
               </div>
               <div class="router_menu">
-                <a href="">Contact</a>
+                <a href="./other/contact.html">Contact</a>
               </div>
             </div>
             <div class="sorting_menu">
@@ -110,13 +110,13 @@
       </div>
     </div>
     <div class="home_page">
-      <div class="header_frame">
+      <div class="header_frame"> 
         <div class="container">
           <div class="header_left">
             <div class="header_content">
               <div>Special Offer</div>
               <span>Immersive Entertainment</span>
-<a href="">Shop Now</a>
+              <a href="./other/product/all.html">Shop Now</a>
               <img src="other/public/images/icons/header_img.svg" alt="" />
             </div>
           </div>
@@ -125,7 +125,7 @@
               <div class="box_left">
                 <span>Starting from $899</span>
                 <p>Health Care Monitor</p>
-                <a href="">Shop Now</a>
+                <a href="./other/product/choosenProduct.html">Shop Now</a>
                 <div class="hover_border"></div>
               </div>
               <div class="box_right">
@@ -136,7 +136,7 @@
               <div class="box_left">
                 <span>Starting from $899</span>
                 <p>Hanpicked Headphones</p>
-                <a href="">Shop Now</a>
+                <a href="./other/product/choosenProduct.html">Shop Now</a>
                 <div class="hover_border"></div>
               </div>
               <div class="box_right">
@@ -182,7 +182,7 @@
         <div class="container">
           <div class="category_top">
             <span>Shop Category</span>
-            <a href="">View All categories</a>
+            <a href="./other/product/all.html">View All categories</a>
           </div>
           <div class="category_wrapper">
             <div class="category_box">
@@ -228,7 +228,7 @@
       <div class="container">
         <div class="category_top">
           <span>Top Selling Product</span>
-          <a href="">View All </a>
+          <a href="./other/product/choosenProduct.html">View All </a>
         </div>
       <div class="product_wrapper">
          <div class="next_prev_box">
@@ -236,7 +236,7 @@
           </div>
           <div class="product_boxes">
             <div class="product_box">
-              <a href="">
+              <a href="./other/product/choosenProduct.html">
                 <div class="product_img_box"
                  style="background: url(other/public/images/watch.png); 
                 background-size: cover;">
@@ -247,7 +247,7 @@
               </a>
               <div class="product_content_box"> 
                 <span class="product_titile">SAMSUNG</span>
-                <a href="" class="href">
+                <a href="./other/product/choosenProduct.html" class="product_desc">
                   <p class="product_desc">Apple Watch SE (GPS) 40mm Space Grey Aluminum Case with</p>
                 </a>
                 <div class="review_box">
@@ -396,16 +396,16 @@
       <div class="container">
         <div class="category_top">
           <span>Headphones</span>
-          <a href="">View All </a>
+          <a href="./other/product/all.html">View All </a>
         </div>
         <div class="spec_product_wrapper">
-          <div class="big_product_box">
+          <div class="big_product_box"> 
             <div class="big_product_content">
               <span>Now in moon gray</span>
               <p>Beats
                 Studio Buds
               </p>
-              <a href="">Shop now</a>
+              <a href="./other/product/choosenProduct.html">Shop now</a>
               <div class="hover_border"></div>
             </div>
             <img src="other/public/images/headphone_big.png" alt="">
@@ -459,13 +459,13 @@
           <div class="tv_product_boxes">
             <div class="tv_product_box">
               <div class="product_img">
-                <a href="">
+                <a href="./other/product/choosenProduct.html">
                   <img src="other/public/images/samsung_tv.png" alt="">
                 </a>
               </div>
             <div class="product_content_box"> 
                 <span class="product_titile">SAMSUNG</span>
-                <a href="" class="href">
+                <a href="./other/product/choosenProduct.html" class="href">
                   <p class="product_desc">Samsung 58* 4K UHD HDR LED TIZEN Smart TV</p>
                 </a>
                 <div class="review_box">
@@ -484,13 +484,13 @@
             </div>
              <div class="tv_product_box">
               <div class="product_img">
-                <a href="">
+                <a href="./other/product/choosenProduct.html">
                   <img src="other/public/images/tcl.png" alt="">
                 </a>
               </div>
             <div class="product_content_box"> 
                 <span class="product_titile">TCL</span>
-                <a href="" class="href">
+                <a href="./other/product/choosenProduct.html" class="href">
                   <p class="product_desc">TCL-3 Series 40* 1080p HD LED Android Smart TV</p>
                 </a>
                 <div class="review_box">
@@ -509,13 +509,13 @@
             </div>
              <div class="tv_product_box">
               <div class="product_img">
-                <a href="">
+                <a href="./other/product/choosenProduct.html">
                   <img src="other/public/images/LG-UHD.png" alt="">
                 </a>
               </div>
             <div class="product_content_box"> 
                 <span class="product_titile">LG</span>
-                <a href="" class="href">
+                <a href="./other/product/choosenProduct.html" class="href">
                   <p class="product_desc">LG 65* 4K UHD HDR LED webOS Smart TV</p>
                 </a>
                 <div class="review_box">
@@ -534,13 +534,13 @@
             </div>
              <div class="tv_product_box">
               <div class="product_img">
-                <a href="">
+                <a href="./other/product/choosenProduct.html">
                   <img src="other/public/images/LG-OLED.png" alt="">
                 </a>
               </div>
             <div class="product_content_box"> 
                 <span class="product_titile">LG</span>
-                <a href="" class="href">
+                <a href="./other/product/choosenProduct.html" class="href">
                   <p class="product_desc">LG 55* 4K UHD HDR LED webOS Smart TV</p>
                 </a>
                 <div class="review_box">
@@ -559,13 +559,13 @@
             </div>
              <div class="tv_product_box">
               <div class="product_img">
-                <a href="">
+                <a href="./other/product/choosenProduct.html">
                   <img src="other/public/images/SONY-TV.png" alt="">
                 </a>
               </div>
             <div class="product_content_box"> 
                 <span class="product_titile">SONY</span>
-                <a href="" class="href">
+                <a href="./other/product/choosenProduct.html" class="href">
                   <p class="product_desc">Sony X85J 65" 4K UHD HDR LED Smart Google TV</p>
                 </a>
                 <div class="review_box">
@@ -637,7 +637,7 @@
               <span>Secunds</span>
             </div>
           </div>
-          <a href="">Show More</a>
+          <a href="./other/product/choosenProduct.html">Show More</a>
         </div>
         <div class="event_product_wrapper">
        <div class="next_prev_box">
@@ -652,8 +652,8 @@
               </div>
               <div class="product_content_box" style="padding: 0 0 0 10px;"> 
                 <span class="product_titile">SONY</span>
-                <a href="" class="href">
-                  <a href="">
+                <a href="./other/product/choosenProduct.html" class="href">
+                  <a href="./other/product/choosenProduct.html">
                     <p class="product_desc">SAMSUNG Chromebook 4+ 15.6" Intel® Celeron®</p>
                   </a>
                 </a>
@@ -673,13 +673,13 @@
             </div>
             <div class="event_product_box">
               <div class="event_product_img">
-                <a href="">
+                <a href="./other/product/choosenProduct.html">
                   <img src="other/public/images/sony_playstation.png" alt=""></a>
               </div>
               <div class="product_content_box" style="padding: 0 0 0 10px;"> 
                 <span class="product_titile">SONY</span>
                 <a href="" class="href">
-                  <a href="">
+                  <a href="./other/product/choosenProduct.html">
                     <p class="product_desc">Sony Plastation 5 Video Game Console</p>
                   </a>
                 </a>
@@ -699,14 +699,14 @@
             </div>
             <div class="event_product_box">
               <div class="event_product_img">
-                <a href="">
+                <a href="./other/product/choosenProduct.html">
                   <img src="other/public/images/apple_watch.png" alt="">
                 </a>
               </div>
               <div class="product_content_box" style="padding: 0 0 0 10px;"> 
                 <span class="product_titile">EASTSPORT</span>
-                <a href="" class="href">
-                  <a href="">
+                <a href="./other/product/choosenProduct.html" class="href">
+                  <a href="./other/product/choosenProduct.html">
                     <p class="product_desc">Apple Watch Series 3 GPS Space Gray - 38mm-Black </p></a>
                 </a>
                 <div class="review_box">
@@ -725,13 +725,13 @@
             </div>
             <div class="event_product_box">
               <div class="event_product_img">
-                <a href="">
+                <a href="./other/product/choosenProduct.html">
                   <img src="other/public/images/canon_camera.png" alt=""></a>
               </div>
               <div class="product_content_box" style="padding: 0 0 0 10px;"> 
                 <span class="product_titile">EASTSPORT</span>
-                <a href="" class="href">
-                  <a href="">
+                <a href="./other/product/choosenProduct.html" class="href">
+                  <a href="./other/product/choosenProduct.html">
                     <p class="product_desc">Canon EOS Rebel T100 Digital SLR Camera with.</p>
                   </a>
                 </a>
@@ -756,7 +756,8 @@
         </div>
       </div>
      </div>
-     <div class="footer_frame">
+    </div>
+    <div class="footer_frame">
       <div class="container">
         <div class="footer_top">
           <div class="footer_contact_box">
@@ -854,6 +855,5 @@
         </div>
       </div>
      </div>
-    </div>
   </body> 
 </html>
